Bug 66452 - JUNIPER UVD accelerated playback of WMV3 streams does not work
Summary: JUNIPER UVD accelerated playback of WMV3 streams does not work
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r600 (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-01 11:54 UTC by Eugene Shalygin
Modified: 2014-06-18 12:02 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
kernel log during a hang (45.22 KB, text/plain)
2013-07-12 15:43 UTC, Eugene Shalygin
Details
kernel log after WMV3 decode attempt (16.43 KB, text/plain)
2013-07-16 22:44 UTC, Eugene Shalygin
Details

Description Eugene Shalygin 2013-07-01 11:54:20 UTC
When playing WMV3 streams using mplayer (or mplayer2 or ffplay or mpv) the output is corrupted: it looks like black rectangle with color mess at the top (https://imageshack.com/a/img22/534/yw2a.png).

acceleration of h264 works fine, so I conclude that UVD is initialized succesfully

Radeon Mobility HD 5850

Kernel 3.10.0, libdrm and mesa are from git master (30.06.2013)

sample file: http://samples.mplayerhq.hu/asf-wmv/asf_with_chapters.wmv
Comment 1 Eugene Shalygin 2013-07-12 15:42:01 UTC
Playback of WMV3 streams using UVD sometimes leads to computer hangs (see below). After upgrade of ffmpeg to version 2.0 from 1.2 these hangs happen much more often, almost every time I try to play a WMV3 stream after several seconds of playback. 

Gentoo was porting UVD patches to 3.9 kernel, and I remember that in the time of 3.9 kernel WMV3 deconding was producing correct images (and computer hangs also). With current ucode and kernel 3.9 WMV3 decondig produces the does not work also.

Hangs seem to be almost complete: SysRQ does not work, mouse pointer does not move. The only thing that remains alive is laptop Fn key combsnations to turn on/off backlit of keyboard and screen backlight. Screen backlight turns on (after being turned off) by any key press. Screen picture disappears for 7-10  seconds every 20 or 30 seconds in the "hanged mode" and eventually lead to complete hang of the computer.
Comment 2 Eugene Shalygin 2013-07-12 15:43:37 UTC
Created attachment 82368 [details]
kernel log during a hang
Comment 3 Eugene Shalygin 2013-07-12 15:50:25 UTC
Previous log was accured with Gentoo 3.9 kernel when I managed to kill player process before complete hang. Since neither keyboard nor ssh does not work after a short time after the hang, it is hard for me to get a log with kernel 3.10
Comment 4 Eugene Shalygin 2013-07-16 22:44:02 UTC
Created attachment 82507 [details]
kernel log after WMV3 decode attempt

Today it managed to avoid hangs one time and gave me the log (the player was mpv master branch using ffmpeg 2.0).

Instead of hanging, it dimed screen couple of times, then showed colours cycle (red, green,blue and so on) and than allowed me to kill the player from console.

After killing the player, I returned to X. The desktop was there, but on the next screen repaint X crashed. After that I was not able to log in into KDE: kwin was crashing X on every start.
Comment 5 Eugene Shalygin 2013-10-10 16:35:34 UTC
Since commit 	5b4e2db12d9b45e898a8eb6599d928504ffd30c3  disabled VC-1 simple/main profiles for UVD 3, maybe it might have sense to disable it for UVD 2 also? VC-1 advanced profile seems to be working fine, without hangs.
Comment 6 jyliu 2014-05-27 05:46:28 UTC
My juniper with latest ubuntu 14.04(kernel 3.13) could not reproduce this bug 
please try new distros
Comment 7 jyliu 2014-05-27 05:54:14 UTC
neither ubuntu 12.04.4 can reproduce this bug 
seems it's solved by driver udpates
Comment 8 Eugene Shalygin 2014-05-27 09:24:04 UTC
unfortunately (for this bug) I do not run JUNIPER card anymore. The very last time I checked this was in the beginning of may with Mesa master branch and the bug was still there.
Comment 9 Christian König 2014-06-18 12:02:29 UTC
Well that's actually not really a bug. The hardware just doesn't support WMV3, it only support VC-1 in the advanced profile. So depending on what stream you got it might work or not.

Anyway I've just pushed a patch stopping advertising VC-1 simple and main profile (which are essentially WMV3) support on JUNIPER as well.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.